package my.application.api.entities.mysql.reservation;

public class CompanyReservationDetailService {
    private Long id;
    private CompanyReservationMainService mainServiceId;
    private String introduce;
    private Integer price;
}
